trike agent refactoring